Bug 50921 - : kde4 integration sets the wrong color for menu text
Summary: : kde4 integration sets the wrong color for menu text
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
3.5.4 release
Hardware: x86 (IA32) Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: BSA target:4.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2012-06-09 14:17 UTC by dave lepore
Modified: 2014-03-28 07:17 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
result after modification of colors (191.99 KB, image/png)
2012-12-31 14:01 UTC, Marco Menardi
Details
how to trigger the bug with a usable color scheme (77.13 KB, image/png)
2012-12-31 14:45 UTC, dave lepore
Details

Note You need to log in before you can comment on or make changes to this bug.
Description dave lepore 2012-06-09 14:17:16 UTC
Problem description: 
libreoffice uses the "button text" color for the menubar text, while using the "window background" color for the menubar background. If you use a theme where the "button text" and the "window background" colors are the same, the menu text is not readable anymore. Notice that if you remove the kde integration and install the gtk integration along with the oxygen-gtk theme, the menubar text uses the right color.

Steps to reproduce:
1. open kde systemsettings and go into the application appearence -> colors module
2. set the same color for "window background" and "button text" 
3. open any openoffice app and try to read the menu

Current behavior: the menubar text is not readable

Expected behavior: the menubar text should be readable as in gtk integration

Platform (if different from the browser): 
              
Browser: Mozilla/5.0 (X11; Linux i686; rv:14.0) Gecko/20100101 Firefox/14.0
Comment 1 Marco Menardi 2012-12-31 14:00:20 UTC
I can confirm with Libo 3.6.2 and kde 4.9.x, but wondering: with those settings, except the menu that are still visible in KDE apps while are not in LiBo, is KDE still usable? In the attached screenshot you can see i.e. kcalc, but all dialogs have buttons almost unreadable.
In any case you are raising a difference among LiBo and KDE that probably should be investigated and solved (I remember an old bug about almost unreadable tooltips due to something like that)
Comment 2 Marco Menardi 2012-12-31 14:01:16 UTC
Created attachment 72350 [details]
result after modification of colors
Comment 3 dave lepore 2012-12-31 14:44:35 UTC
hi,

in your screenshot the "button background" has also been set to the same color of "button text" and "window background". This way you get an unusable color scheme, but for the bug to be reproducible it is not required to set same color also for "button background". 

As an example of a usable color scheme where the bug occours, please see the attached screenshot.
Comment 4 dave lepore 2012-12-31 14:45:50 UTC
Created attachment 72351 [details]
how to trigger the bug with a usable color scheme
Comment 5 Commit Notification 2014-03-28 07:17:02 UTC
LuboÅ¡ LuÅak committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5e7aad393c0c3fab20c8298697ca96563caa7afe

menu(bar) uses window text and background color, not button (fdo#50921)



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.