menu(bar) uses window text and background color, not button (fdo#50921)

Change-Id: I13adebd09746d21e7456927e14dcdc3efb2c723b